fix(colors): adjust foreground-muted color mix percentage to ensure enough contrast in light-mode

--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -5,7 +5,7 @@
   --background-inverted: var(--foreground);
   --foreground-inverted: var(--background);
 
-  --foreground-muted: color-mix(in srgb, var(--foreground), var(--background) 40%);
+  --foreground-muted: color-mix(in srgb, var(--foreground), var(--background) 39%);
 }
 
 html {
